mail/mail-html-transformer/src/tests/snapshots/proton_mail_html_transformer__transforms__tests__dark_mode__regressions__dark_mode_on_android_LightMode.snap
---
source: mail/mail-html-transformer/src/tests/dark_mode.rs
expression: html.to_string()
---
<html data-protonmail-message="true"><head>

<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">

<style type="text/css" style="display:none;"> P {margin-top:0;margin-bottom:0;} </style>

<style type="text/css">*,
*::before,
*::after {
    box-sizing: border-box;
}

article,
aside,
details,
dialog,
figure,
footer,
header,
main,
menu,
nav,
section {
    display: block;
}

audio,
canvas,
progress,
video {
    display: inline-block;
}

abbr,
mark,
meter,
time,
output {
    display: inline;
}

html,
body,
blockquote,
ul,
ol,
form,
button,
figure {
    margin: 0;
    padding: 0;
}

button,
progress {
    border: 0;
}

p,
ul,
ol,
dl,
blockquote,
pre,
menu,
td,
th {
    font-size: 1em;
    line-height: 1.5;
    margin-inline: 0;
}

input,
select,
textarea,
optgroup,
button {
    font: inherit;
}

img,
iframe {
    vertical-align: middle;
}

ul,
ol,
menu {
    padding-inline-start: 2em;
}

dd {
    margin-inline-start: 2em;
}

b,
strong {
    font-weight: bold;
}

pre,
code,
kbd,
samp {
    font-family: SFMono-Regular, Consolas, "Liberation Mono", Menlo, monospace;
    font-size: 1em;
}

pre {
    white-space: pre-wrap;
    word-wrap: break-word;
}

mark {
    background-color: var(--bgcolor-mark, #ff0);
    color: var(--color-mark, currentColor);
    font-weight: bold;
}

small {
    font-size: 80%;
}

a:link {
    color: var(--primary);
}

a:link img,
a:visited img,
img {
    border-style: none;
}

audio:not([controls]) {
    display: none;
    block-size: 0;
}

abbr[title] {
    border-block-end: dotted 1px;
    cursor: help;
    text-decoration: none;
}

code,
pre,
samp {
    white-space: pre-wrap;
}

code {
    line-height: 1;
}

dfn {
    font-style: italic;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    display: block;
    font-weight: normal;
    margin-inline: 0;
}

h1 {
    font-size: 2em; /* equiv 32px */
    line-height: 1.5;
    margin-block: 0.75em;
}

h2 {
    font-size: 1.5em; /* equiv 24px */
    line-height: 1;
    margin-block: 0.5em;
}

h3 {
    font-size: 1.1875em; /* equiv 19px */
    line-height: 1.26316;
    margin-block: 1.26316em;
}

h4 {
    display: block;
    font-size: 1em; /* equiv 16px */
    line-height: 1.5;
    margin-block: 1.5em;
}

h5 {
    font-size: 0.8125em; /* equiv 13px */
    line-height: 1.84615;
    margin-block: 1.84615em;
}

h6 {
    font-size: 0.75em; /* equiv 12px */
    line-height: 2;
    margin-block: 2em;
}

q {
    quotes: none;
}

q::after,
q::before {
    content: none;
}

a:focus {
    outline: dotted thin;
}

a:active,
a:hover {
    outline: 0;
}

img {
    border: 0;
    max-inline-size: 100%;
}

table img {
    max-inline-size: none;
}

blockquote {
    padding-block: 0.2em !important;
    padding-inline: 1.2em !important;
    margin: 0 !important;
    border: 3px solid var(--primary) !important;
    border-block-width: 0 !important;
    border-inline-end-width: 0 !important;
    border-inline-start-width: 3px !important;
}

blockquote blockquote blockquote blockquote blockquote blockquote {
    padding: 0 !important;
    border: none !important;
}

[hidden] {
    display: none;
}

:root {
    /**
	  If we want to follow some app themes, we have to inject values and/or update --primary for link/blockquote

	--background-norm: white;
	--text-norm: #262a33;
    */

    --primary: #8a6eff;
}

body {
    font-size: 100%;
    inline-size: 100%;
    background: var(--background-norm, Canvas);
    color: var(--text-norm, CanvasText);
    font-family:
        -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans,
        Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
    line-height: 1.5;
    word-wrap: break-word;
    width: 100%;
    padding: 0 !important;
    margin: 0 !important;
    overflow-x: hidden;
}

/* From Android V6 */

/* Only override <pre> when it's the first direct child of the body (case when replying to HTML). */
body > pre:first-child {
    margin: 0;
    font-size: 100%;
    inline-size: 100%;
    font-family:
        -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans,
        Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
    line-height: 1.5;
    background: var(--background-norm, Canvas);
    color: var(--text-norm, CanvasText);
}

/* This should not be needed, but in some cases the resulting HTML contains a <pre> within a styled body. */
body:not([class]) > pre:first-child {
    margin: 0;
    padding: unset;
    font-size: 100%;
    inline-size: 100%;
    font-family:
        -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans,
        Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
    line-height: 1.5;
    background: var(--background-norm, Canvas);
    color: var(--text-norm, CanvasText);
}
body {
    color-scheme: light;
}</style></head>

<body dir="ltr">

<div class="elementToProof" style="font-family: Calibri, Helvetica, sans-serif; font-size: 12pt; color: rgb(0, 0, 0);">

This is a single line message</div>



</body></html>
